# kinesis-exercice

./: .gitignore  README.md  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  db.py  init_db.py  logging_config.py  main.py
backend/app/api/: __init__.py  auth.py  compare.py  deps.py  exercises.py  live.py  progress.py  sessions.py  stats.py
backend/app/exercises/: __init__.py  bicep_curl.yaml  cable_row.yaml  chest_press.yaml  deadlift.yaml  lat_pulldown.yaml  lateral_raise.yaml  pushup.yaml  shoulder_press.yaml  squat.yaml  tricep_pushdown.yaml
backend/app/exercises/_stubs/: README.md  cable_row.yaml  chest_press.yaml  lat_pulldown.yaml  shoulder_press.yaml  tricep_pushdown.yaml
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: pipeline.py  timing.py
backend/app/services/auth/: __init__.py
backend/app/services/biomechanics/: __init__.py
backend/app/services/coaching/: __init__.py
backend/app/services/email/: __init__.py
backend/app/services/feedback/: __init__.py
backend/app/services/insights/: __init__.py
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: benchmark_pose.py  build_demo_data.py
backend/tests/: conftest.py  synthetic.py  test_assess_quality.py  test_biomechanics.py  test_email_verification.py  test_engine_v2.py  test_exercise_configs.py  test_insights.py  test_live_api.py  test_live_pipeline.py  test_reps_and_rules.py  test_smoothing.py
(+102 files in other folders)
