[project]
name = "kinesis-backend"
version = "0.1.0"
description = "Kinesis — gym technique analysis backend (FastAPI + MediaPipe + biomechanics)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "celery>=5.3",
    "redis>=5.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "PyYAML>=6.0",
    "mediapipe>=0.10.14",
    "opencv-python-headless>=4.9",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
